--- a/kadai4.html
+++ b/kadai4.html
@@ -77,6 +77,8 @@
 
             // 課題4-2. ここにコードを書く
             // 商品表の作成
+            for (let i = 0; i < item_list.length; i++) {
+                const row = document.createElement("tr");
 
             // クリックイベント時の購入処理の設定
             for (let i=0; i<item_list.length; i++) {
