--- a/kadai4.html
+++ b/kadai4.html
@@ -83,6 +83,8 @@
                 const nameCell = document.createElement("td");
                 nameCell.textContent = item_list[i].name;
                 row.appendChild(nameCell);
+
+                itemArea.appendChild(row);
             }
 
             // クリックイベント時の購入処理の設定
