--- a/kadai4.html
+++ b/kadai4.html
@@ -60,7 +60,7 @@
 
             // 商品テーブルのエレメント抽出
             const itemArea = document.getElementById("item_area");
-            itemArea.innerHTML += "<tr><th>商品名</th><th>金額a</th><th>在庫数</th><th>購入</th></tr>";
+            itemArea.innerHTML += "<tr><th>商品名</th><th>金額</th><th>在庫数</th><th>購入</th></tr>";
 
             // 配列のオブジェクト作成
             const item_list = new Array(items.length);
