--- a/kadai4.html
+++ b/kadai4.html
@@ -98,6 +98,8 @@
                 button.id = "button" + item_list[i].id;
                 buyCell.appendChild(button);
 
+                row.appendChild(buyCell);
+
                 itemArea.appendChild(row);
             }
 
