--- a/kadai4.html
+++ b/kadai4.html
@@ -51,9 +51,11 @@
                         console.log("商品番号: "+this.id+", 商品名: "+this.name+"を購入します。");
                         // 課題4-2. ここにコードを書く
                         // 購入による商品の在庫削減処理
-                        item.stock -= 1;
+                        this.stock -= 1;
                         
                         // 課題4-3. ここにコードを書く
+                        document.getElementById("stock" + this.id).textContent = this.stock;
+                        stockCell.textContent = this.stock;
                         // 在庫用のエレメントを抽出し、HTML内の個数を更新
                     } else console.log(this.name+"は商品の在庫がないため購入できません。");
                 }
