--- a/kadai4.html
+++ b/kadai4.html
@@ -55,7 +55,8 @@
                         
                         // 課題4-3. ここにコードを書く
                         document.getElementById("stock" + this.id).textContent = this.stock;
-                        stockCell.textContent = this.stock;
+                        stockCell.textContent = item_list[i].stock;
+                        row.appendChild(stockCell);
                         // 在庫用のエレメントを抽出し、HTML内の個数を更新
                     } else console.log(this.name+"は商品の在庫がないため購入できません。");
                 }
@@ -109,9 +110,7 @@
             // クリックイベント時の購入処理の設定
             for (let i=0; i<item_list.length; i++) {
                 // 課題4-3. ここにコードを書く
-                document.getElementById("button" + item_list[i].id).onclick = () => {
-                    item_list[i].buyItem();
-                };
+                
             }
                 // 課題4-1, 4-2のコードが完成したら、以下のコメントを外す
                 document.getElementById("button"+item_list[i].id).onclick = () => {
