--- a/kadai4.html
+++ b/kadai4.html
@@ -33,7 +33,7 @@
 
                 // 商品一覧の表示関数
                 static showItemList(list) {
-                    console.log("商品は以下の" + Item.number + "種類です。");
+                    console.log("商品は以下の" + Item.length + "種類です。");
 
                     // 配列の内容を項目毎に出力
                     // 課題4-1. ここにコードを書く
@@ -93,6 +93,7 @@
 
                 const stockCell = document.createElement("td");
                 stockCell.textContent = item_list[i].stock;
+                stockCell.id = "stock" + item_list[i].id;
                 row.appendChild(stockCell);
 
                 const buyCell = document.createElement("td");
