--- a/kadai4.html
+++ b/kadai4.html
@@ -54,6 +54,7 @@
                         // 課題4-3. ここにコードを書く
                         document.getElementById("stock" + this.id).textContent = this.stock;
                         stockCell.id = "stock" + item_list[i].id;
+                        consol.log("残りは"+stock"個です。");
                         
                         // 在庫用のエレメントを抽出し、HTML内の個数を更新
                         
